fix(android): avoid Java 11 String API in reader